Height and Weight is defined in the NationSpec
The objective of this is to define different averages for different countries.
In addition to delivery this, contruction of Person object has been reworked to remove the need to have a
second ```initialise``` method. Objects should be usable after the constructor.

Changes:
- Create a new PopulationCharacteristics class that defines the chararctertics of a population.
- Add a new parse methof to ConfigHelper to load the new class
- NationSpec & PersonConfig load a instance of the PopulationCharacteristics for the nation of default in the latter case.
- people.xml, country.xsd & country_norway.xml updated to hold the characteritics details
- PopulationCharacteristics has method to create a random height & weight based on it's attributes
- Person has a single constructor that takes the mandatory settings
- Person class initialises everything in the constructor; moved most "find default" logic to the PersonBuilder class
- PersonBuilderImpl reworked so the Person obejct is created at the end instead of at the start; allows default to be calculated
- PersonBuilderImpl is responsible for creating the defaults properties of the new Person to create; Person just accepts the arguments
- Correct the problem with SimulationConfig trapping error in XML files; bad loading will throw an error
- Remove the short Person constructor used by Unittest; repalced with call to the PersonBuilder logic.
- Add/improve Unit tests for PopulationCharacteristics, NationSpecConfig, PersonConfig
- Remove unused attributres of Person

Part of #47