@@ -19,6 +19,7 @@ import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.time.StopWatch;
 
+import com.mars_sim.core.Entity;
 import com.mars_sim.core.GameManager;
 import com.mars_sim.core.GameManager.GameMode;
 import com.mars_sim.core.authority.Authority;
@@ -193,7 +194,7 @@ public final class SettlementBuilder {
 		List<String> remainingNames = new ArrayList<>(sponsor.getSettlementNames());
 
 		List<String> usedNames = unitManager.getSettlements().stream()
-							.map(s -> s.getName()).collect(Collectors.toList());
+							.map(Entity::getName).toList();
 
 		remainingNames.removeAll(usedNames);
 		int idx = RandomUtil.getRandomInt(remainingNames.size());
@@ -409,16 +410,10 @@ public final class SettlementBuilder {
 			existingfullnames.add(fullname);
 
 			// Use Builder Pattern for creating an instance of Person
-			Person person = Person.create(fullname, settlement)
-					.setGender(gender)
-					.setCountry(country)
+			Person person = Person.create(fullname, settlement, gender)
 					.setSponsor(sponsor)
-					.setSkill(null)
-					.setPersonality(null, null)
-					.setAttribute(null)
+					.setCountry(spec)
 					.build();
-
-			person.initialize();
 
 			unitManager.addUnit(person);
 
@@ -510,7 +505,7 @@ public final class SettlementBuilder {
 
 				// Retrieve country & sponsor designation from people.xml (may be edited in
 				// CrewEditorFX)
-				String country = m.getCountry();
+				var country = namingSpecs.getItem(m.getCountry());
 
 				// Loads the person's preconfigured skills (if any).
 				Map<String, Integer> skillMap = m.getSkillMap();
@@ -526,17 +521,14 @@ public final class SettlementBuilder {
 
 				// Create person and add to the unit manager.
 				// Use Builder Pattern for creating an instance of Person
-				Person person = Person.create(name, settlement)
-						.setGender(gender)
+				Person person = Person.create(name, settlement, gender)
 						.setAge(age)
-						.setCountry(country)
 						.setSponsor(sponsor)
+						.setCountry(country)
 						.setSkill(skillMap)
 						.setPersonality(bigFiveMap, mbti)
 						.setAttribute(attributeMap)
 						.build();
-
-				person.initialize();
 
 				unitManager.addUnit(person);
 
